z-index fix

--- a/styles/blocks/blk/gallery.less
+++ b/styles/blocks/blk/gallery.less
@@ -11,7 +11,7 @@
         height: 320px + 20px;
       }
 
-      z-index: 10;
+      z-index: 999998;
     }
 
     .blk-gallery__btn-wrap {
@@ -22,7 +22,7 @@
       text-align: center;
       width: 100%;
 
-      z-index: 11;
+      z-index: 999999;
     }
 
     .blk-gallery__btn {
