--- a/styles/blocks/blk/service.less
+++ b/styles/blocks/blk/service.less
@@ -45,7 +45,9 @@
 
     .blk-service__img {
       width: 100%;
-      height: 100%;
+      //height: 100%;
+
+      height: 270px;
 
       border-radius: @roundness;
 
