--- a/styles/blocks/misc/mcard.less
+++ b/styles/blocks/misc/mcard.less
@@ -73,7 +73,7 @@
     width: 100%;
     height: 100%;
 
-    z-index: 9999999;
+    z-index: 99999;
   }
 
   /* Заголовок */
