--- a/styles/main.css
+++ b/styles/main.css
@@ -622,7 +622,7 @@ span.tag.tag_emph {
 }
 .blk.blk-service .blk-service__img {
   width: 100%;
-  height: 100%;
+  height: 270px;
   border-radius: 10px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -656,7 +656,7 @@ span.tag.tag_emph {
 .blk.blk-gallery .blk-gallery__overlay {
   left: 0;
   height: 220px;
-  z-index: 10;
+  z-index: 999998;
 }
 @media (min-width: 768px) {
   .blk.blk-gallery .blk-gallery__overlay {
@@ -669,7 +669,7 @@ span.tag.tag_emph {
   left: 0;
   text-align: center;
   width: 100%;
-  z-index: 11;
+  z-index: 999999;
 }
 .blk.blk-gallery .blk-gallery__btn {
   padding: 0 25px;
@@ -1254,7 +1254,7 @@ span.tag.tag_emph {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 9999999;
+  z-index: 99999;
 }
 .mcard h3.mcard__heading {
   margin-bottom: 15px;
